--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
 
     <string name="go_to_map_button_text">Navigate</string>
 
+    <!-- DEFAULT -->
+    <string name="default_value">Default Value</string>
+
 </resources>
