Task list update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <string name="go_to_map_button_text">Create</string>
     <string name="create_poi">Add a new Point</string>
+    <string name="create_task">Add a new Task</string>
 
     <!-- DEFAULT -->
     <string name="default_value">Default Value</string>
