--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
 
     <!-- DEFAULT -->
     <string name="default_value">Default Value</string>
+    <string name="loading">Loading...</string>
+    <string name="error_on_loading">An error occured why trying to load the image</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
